# HACKATHON_MCP

./: .gitignore  CURSOR_SETUP.md  README.md  campaign_summary.py  cursor_mcp_config.json  env.example  example.js  example_python.py  package-lock.json  package.json  pyproject.toml  test-mcp.js  test_campaigns.py
mcp-poc-2/: claude_desktop_config.json  package-lock.json  package.json  test-simple.js
src/: index.js  index.ts  types.ts  uber-ads-client.ts
src/uber_ads_mcp_server/: __init__.py  __main__.py  server.py  types.py  uber_ads_client.py
